User service modified
